--- a/Makefile.am
+++ b/Makefile.am
@@ -30,4 +30,11 @@ pkgconfig_DATA= xerces-c.pc
 check:
 	-rm -f test-results.log
 	export PATH=${abs_top_builddir}/samples:${abs_top_builddir}/tests:"${PATH}" && export XERCESC_NLS_HOME=${abs_top_builddir}/src/.libs && cd ${top_srcdir} && perl scripts/sanityTest.pl 2>&1 | ${SED} 's/ *[0-9][0-9]*  *ms */{timing removed}/' 1> ${abs_top_builddir}/test-results.log
+	if [ "$$(dpkg-architecture -q DEB_HOST_ARCH_BITS)" -eq 32 ]; then \
+	    cp ${top_srcdir}/scripts/sanityTest_ExpectedResult.log ${top_srcdir}/scripts/sanityTest_ExpectedResult_32.log; \
+	    patch -p1 < ${top_srcdir}/scripts/sanityTest_ExpectedResult_32.diff; \
+	fi
 	diff test-results.log ${top_srcdir}/scripts/sanityTest_ExpectedResult.log
+	if [ "$$(dpkg-architecture -q DEB_HOST_ARCH_BITS)" -eq 32 ]; then \
+	    patch -p1 -R < ${top_srcdir}/scripts/sanityTest_ExpectedResult_32.diff; \
+	fi
