--- a/scripts/run-test.in
+++ b/scripts/run-test.in
@@ -46,6 +46,11 @@ run_test() {
     sed -i -e 's;\( *[0-9][0-9]* *ms *\);{timing removed};' "$output"
 
     exp=$(cat "${srcdir}/expected/${name}.log")
+
+    if [ "${name}" = "MemHandlerTest1" ] && [ "$(dpkg-architecture -q DEB_HOST_ARCH_BITS)" -eq 32 ]; then
+        exp=$(cat "${srcdir}/expected/${name}_32.log")
+    fi
+
     obs=$(cat "$output")
 
     echo "------"
